Add basic homepage layout

--- a/src/Components/Map/Map.scss
+++ b/src/Components/Map/Map.scss
@@ -1,1 +1,7 @@
-@import '../../index.scss'
+@import '../../index.scss';
+
+
+.mapContainer {
+  background-color: aqua;
+  grid-column: 2 / span 3;
+}
