--- a/src/Components/App/App.scss
+++ b/src/Components/App/App.scss
@@ -5,4 +5,11 @@
   background-repeat: no-repeat;
   background-position: center;
   min-height: 20vh;
+  border-bottom: 2rem solid $primaryColor;
+
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
+
