--- a/src/Components/Search/Search.scss
+++ b/src/Components/Search/Search.scss
@@ -1,2 +1,28 @@
 @import '../../index.scss';
 
+.searchBar {
+  background-color: $primaryColor;
+  height: 3rem;
+  max-width: 40rem;
+  padding: .5rem;
+  display: flex;
+  justify-content: space-evenly;
+  border-radius: 5px;
+
+}
+
+#searchInput {
+  margin-right: 1rem;
+  width: 16rem;
+
+
+}
+
+#searchBtn {
+
+  @include btn;
+
+  &:hover {
+    cursor: pointer;
+  }
+}
