--- a/src/index.scss
+++ b/src/index.scss
@@ -4,11 +4,10 @@
   border: 0;
 }
 
-// html {
-//   font-size: 62.5%;
-// }
+@mixin btn {
+  width: 6rem;
+  border-radius: 3px;
 
-// body {
-//   font-size: 1.6rem;
-// }
+}
 
+$primaryColor: #A9721F;
