--- a/src/Components/BreweryCard/BreweryCard.scss
+++ b/src/Components/BreweryCard/BreweryCard.scss
@@ -1,1 +1,8 @@
-@import '../../index.scss'
+@import '../../index.scss';
+
+.breweryCard {
+  background-color: #E0CC99;
+  min-height: 5rem;
+  width: 100%;
+  padding: 1rem;
+}
