Add assets folder

--- a/src/Components/App/App.scss
+++ b/src/Components/App/App.scss
@@ -1,7 +1,7 @@
 @import '../../index.scss';
 
 .mainHeader {
-  background-image: url('./hops.jpeg');
+  background-image: url('../../Assets/hops.jpeg');
   background-repeat: no-repeat;
   background-position: center;
   min-height: 20vh;
