feat: Add functionality to filter out duplicate state names

--- a/src/Components/Search/Search.scss
+++ b/src/Components/Search/Search.scss
@@ -13,8 +13,6 @@
 #searchInput {
   margin-right: 1rem;
   width: 16rem;
-
-
 }
 
 #searchBtn {
@@ -24,4 +22,8 @@
   &:hover {
     cursor: pointer;
   }
+}
+
+.dropdown{
+  margin-right: 1rem;
 }
