--- a/src/Components/Search/Search.scss
+++ b/src/Components/Search/Search.scss
@@ -10,6 +10,13 @@
   border-radius: 5px;
 }
 
+.state-error-message{
+  padding: .5rem;
+  border: .5rem solid $primaryColor;
+  background-color: white;
+  margin-bottom: 0.5rem ;
+}
+
 #searchInput {
   margin-right: 1rem;
   width: 16rem;
@@ -23,7 +30,7 @@
     cursor: pointer;
   }
 }
-
 .dropdown{
   margin-right: 1rem;
+  width: 6.5rem;
 }
