--- a/src/Components/Search/Search.scss
+++ b/src/Components/Search/Search.scss
@@ -10,7 +10,7 @@
   border-radius: 5px;
 }
 
-.state-error-message{
+.location-error-message{
   padding: .5rem;
   border: .5rem solid $primaryColor;
   background-color: white;
