--- a/src/Components/BreweryContainer/BreweryContainer.scss
+++ b/src/Components/BreweryContainer/BreweryContainer.scss
@@ -6,3 +6,10 @@
   gap: 1rem;
   padding: 1rem;
 }
+
+.no-results-message{
+  background-color: #e0cc99;
+  padding: 1rem;
+  text-align: center;
+  align-self: center;
+}
