--- a/src/Components/BreweryCard/BreweryCard.scss
+++ b/src/Components/BreweryCard/BreweryCard.scss
@@ -2,7 +2,7 @@
 
 .breweryCard {
   background-color: #e0cc99;
-  min-height: 5rem;
+  height: fit-content;
   width: 100%;
   padding: 1rem;
   position: relative;
