--- a/src/Components/BreweryContainer/BreweryContainer.scss
+++ b/src/Components/BreweryContainer/BreweryContainer.scss
@@ -4,5 +4,7 @@
   display: grid;
   grid-template-columns: 1fr;
   gap: 1rem;
-  padding: 1rem;
+  padding: 0 1rem 0 0;
+  height: 76vh;
+  overflow-y: scroll;
 }
