Add favorites page components

--- a/src/Components/BreweryContainer/BreweryContainer.scss
+++ b/src/Components/BreweryContainer/BreweryContainer.scss
@@ -4,7 +4,7 @@
   display: grid;
   grid-template-columns: 1fr;
   gap: 1rem;
-  padding: 0 1rem 0 0;
-  height: 76vh;
+  padding: 0 .3rem 0 0;
+  height: 75vh;
   overflow-y: scroll;
 }
