--- a/src/Components/Homepage/Homepage.scss
+++ b/src/Components/Homepage/Homepage.scss
@@ -2,7 +2,20 @@
 
 .homepage {
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
+  grid-template-columns: repeat( 4, 1fr);
   padding: 1rem;
 }
 
+.mainHeader {
+  background-image: url('../../Assets/hops.jpeg');
+  background-repeat: no-repeat;
+  background-position: center;
+  min-height: 20vh;
+  border-bottom: 2rem solid $primaryColor;
+  padding: 1rem;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: end;
+}
