feat: Add error page component

--- a/src/Components/Map/Map.scss
+++ b/src/Components/Map/Map.scss
@@ -8,6 +8,7 @@
 
 .leaflet-container {
   width: auto;
-  height: 650px;
-  margin: .5rem;
+  height: 78vh;
+  margin: 1vh;
+  box-sizing: border-box;
 }
