feat: Add click functionality on brewery map points

--- a/src/Components/Map/Map.scss
+++ b/src/Components/Map/Map.scss
@@ -12,3 +12,13 @@
   margin: 1vh;
   box-sizing: border-box;
 }
+
+.brewery-popup{
+  background-color: $primaryColor;
+  padding: 0;
+  color: white;
+}
+
+.leaflet-popup-content-wrapper{
+  background-color: $primaryColor;
+}
