--- a/src/Components/BreweryContainer/BreweryContainer.scss
+++ b/src/Components/BreweryContainer/BreweryContainer.scss
@@ -1,6 +1,7 @@
 @import '../../index.scss';
 
 .breweryContainer {
+  
   display: grid;
   grid-template-columns: 1fr;
   gap: 1rem;
@@ -14,4 +15,12 @@
   padding: 1rem;
   text-align: center;
   align-self: center;
+}
+
+.filter-btn {
+  height: 2rem;
+  display: flex;
+  justify-content: center;
+  cursor: pointer;
+  align-items: center;
 }
