--- a/src/Components/AgeCheck/AgeCheck.scss
+++ b/src/Components/AgeCheck/AgeCheck.scss
@@ -9,15 +9,19 @@
     align-items: center;
 }
 
-.age-check-circle{
-    height: 50%;
-    width: 30%;
+.age-check-wrapper{
+    height: 40%;
+    width: 40%;
     background-color: rgba(249, 226, 196, 0.9);
-    border-radius: 60%;
+    border-radius: 5px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+}
+
+.content{
+  margin: 2rem;
 }
 
 .age-check-circle p{
@@ -27,13 +31,20 @@
 .age-check-circle button{
     margin: 20px;
     width: 5em;
-    border-radius: .5em;
+    border-radius: 5px;
 }
 
 .yes-button{
-    background-color: rgb(154, 195, 93);
+  height: 2rem;
+  width: 5rem;
+  border-radius: 5px;
+  background-color: $primaryColor;
 }
 
-.no-button{
-    background-color: red;
+.yes-button:hover{
+  cursor: pointer;
+  background-color: rgb(154, 195, 93);
+  transform: translateY(-3px);
+  box-shadow: 0 1rem 2rem rgba( 0, 0, 0, .5);
 }
+
