--- a/src/Components/AgeCheck/AgeCheck.scss
+++ b/src/Components/AgeCheck/AgeCheck.scss
@@ -1,17 +1,18 @@
 @import '../../index.scss';
 
-.age-check-overlay{
+.overlay-container{
     background-color: $primaryColor;
-    height: 100vh;
-    width: 100vw;
+    height: 70%;
+    width: 80%;
     display: flex;
     justify-content: center;
     align-items: center;
+    border-radius: 5px;
 }
 
 .age-check-wrapper{
-    height: 40%;
-    width: 40%;
+    height: 50%;
+    width: 50%;
     background-color: rgba(249, 226, 196, 0.9);
     border-radius: 5px;
     display: flex;
@@ -35,8 +36,9 @@
 }
 
 .yes-button{
-  height: 2rem;
-  width: 5rem;
+  font-size: 1rem;
+  height: 2.5rem;
+  width: 6rem;
   border-radius: 5px;
   background-color: $primaryColor;
 }
