feat: Add cypress testing for what we currently have for favorites functionality

--- a/src/Components/Homepage/Homepage.scss
+++ b/src/Components/Homepage/Homepage.scss
@@ -6,7 +6,7 @@
   padding: 1rem;
 }
 
-.mainHeader {
+.main-header {
   background-image: url('../../Assets/hops.jpeg');
   background-repeat: no-repeat;
   background-position: center;
