--- a/src/Components/BreweryCard/BreweryCard.scss
+++ b/src/Components/BreweryCard/BreweryCard.scss
@@ -1,6 +1,6 @@
 @import '../../index.scss';
 
-.breweryCard {
+.brewery-card {
   background-color: #e0cc99;
   height: fit-content;
   width: 100%;
@@ -31,7 +31,7 @@
   justify-content: space-evenly;
 }
 
-.breweryCard-favorites-btn {
+.brewery-card-favorites-btn {
   background-color: #e0cc99;
   position: absolute;
   top: 0.5rem;
