--- a/src/Components/AgeCheck/AgeCheck.scss
+++ b/src/Components/AgeCheck/AgeCheck.scss
@@ -35,7 +35,8 @@
     border-radius: 5px;
 }
 
-.yes-button{
+.yes-button,
+.no-button{
   font-size: 1rem;
   height: 2.5rem;
   width: 6rem;
@@ -46,6 +47,13 @@
 .yes-button:hover{
   cursor: pointer;
   background-color: rgb(154, 195, 93);
+  transform: translateY(-3px);
+  box-shadow: 0 1rem 2rem rgba( 0, 0, 0, .5);
+}
+
+.no-button:hover{
+  cursor: pointer;
+  background-color: rgb(247, 2, 2);
   transform: translateY(-3px);
   box-shadow: 0 1rem 2rem rgba( 0, 0, 0, .5);
 }
