--- a/src/Components/BreweryCard/BreweryCard.scss
+++ b/src/Components/BreweryCard/BreweryCard.scss
@@ -1,9 +1,9 @@
 @import '../../index.scss';
 
 .breweryCard {
-  background-color: #e0cc99;
+  background-color: #E3E3C4 ;
   height: fit-content;
-  width: 100%;
+  max-width: 100%;
   padding: 1rem;
   position: relative;
 
@@ -21,7 +21,7 @@
   width: 5rem;
 
   background-color: $primaryColor;
-  color: antiquewhite;
+  color: #f5f5dc;
   text-decoration: none;
   cursor: pointer;
 }
@@ -37,7 +37,6 @@
   top: 0.5rem;
   right: 0.5rem;
 }
-
 
 .card-text {
   margin: 0.5rem 0;
