--- a/src/Components/Map/Map.scss
+++ b/src/Components/Map/Map.scss
@@ -16,7 +16,7 @@
 .brewery-popup{
   background-color: $primaryColor;
   padding: 0;
-  color: white;
+  color: #f5f5dc;
 }
 
 .leaflet-popup-content-wrapper{
