feat: Brewery card flyTo on map. Selecting marker changes brewery cards

--- a/src/Components/Map/Map.scss
+++ b/src/Components/Map/Map.scss
@@ -22,3 +22,12 @@
 .leaflet-popup-content-wrapper{
   background-color: $primaryColor;
 }
+
+.popup-visible{
+  display: block;
+}
+
+.popup{
+  display: none;
+}
+
