--- a/src/index.scss
+++ b/src/index.scss
@@ -7,10 +7,52 @@
 @mixin btn {
   width: 6rem;
   border-radius: 3px;
+  color: $lightColor;
+  
 }
 
 body {
   font-family: 'Lato', sans-serif;
 }
 
-$primaryColor: #A9721F;
+// $accentColor: #A9721F;
+// $accentColor: #591a0a;
+$accentColor: #562007;
+$lightAccentColor: #9c5425;
+$darkColor: #273f1d;
+$oliveGreen: #BAB86C;
+$mediumColor: #808000;
+$brightColor: #7daa40;
+$lightColor: #f7f7ed;
+
+@media screen and (max-width: 1080px) {
+  .map__container {
+    grid-column: 3 / span 2;
+  }
+
+  .breweryContainer {
+    grid-column: 1 / span 2;
+
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .homepage {
+    grid-template-columns: 1fr;
+    gap: 2rem;
+  }
+
+  .map__container {
+    grid-column: auto;
+    order: 1;
+    height: 300px;
+
+  }
+
+  .breweryContainer {
+    grid-column: auto;
+    order: 2;
+
+  }
+
+}
