--- a/src/Components/BreweryContainer/BreweryContainer.scss
+++ b/src/Components/BreweryContainer/BreweryContainer.scss
@@ -1,16 +1,15 @@
 @import '../../index.scss';
 
 .breweryContainer {
-  
   display: grid;
   grid-template-columns: 1fr;
   gap: 1rem;
-  padding: 0 .3rem 0 0;
+  padding: 0 1rem 0 0;
   height: 75vh;
   overflow-y: scroll;
 }
 
-.no-results-message{
+.no-results-message {
   background-color: #e0cc99;
   padding: 1rem;
   text-align: center;
