--- a/src/Components/FavoritesPage/FavoritesPage.scss
+++ b/src/Components/FavoritesPage/FavoritesPage.scss
@@ -1,13 +1,21 @@
+@import '../../index.scss';
+
 .favorites-page {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 3rem;
+  padding:  5rem 3rem;
+  display: flex;
+  // grid-template-rows: repeat(4, 1fr);
+  // background-color: $lightColor;
+  background-color: $oliveGreen;
 }
 
 .favs-grid {
-  max-width: 80rem;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  // grid-template-rows: repeat(auto-fit, minmax(100px, 1fr));
+  grid-auto-flow: column;
+  grid-template-rows: repeat(3, 200px);
+  grid-auto-columns: 300px 100px;
   gap: 2rem;
 }
