--- a/src/Components/AgeCheck/AgeCheck.scss
+++ b/src/Components/AgeCheck/AgeCheck.scss
@@ -1,52 +1,48 @@
 @import '../../index.scss';
 
-.overlay-container{
-    background-color: $accentColor;
-    height: 70%;
-    width: 80%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 5px;
+.overlay-container {
+  background-image: url('../../Assets/beers.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  height: 100%;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 5px;
+  padding: 5%;
 }
 
-.age-check-wrapper{
-    height: 50%;
-    width: 50%;
-    background-color: rgba(249, 226, 196, 0.9);
-    border-radius: 5px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+.age-check-wrapper {
+  height: 80%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  background-color: rgb(247, 247, 237, 0.7);
+  border-radius: 5px;
+  padding: 2rem;
 }
 
-.content{
-  margin: 2rem;
+.age-q {
+  font-size: 3rem;
 }
 
-.age-check-circle p{
-    margin-top: 30px;
+.content {
+  color: $darkColor;
 }
 
-.age-check-circle button{
-    margin: 20px;
-    width: 5em;
-    border-radius: 5px;
-}
-
-.yes-button{
+.yes-button {
   font-size: 1rem;
   height: 2.5rem;
-  width: 6rem;
-  border-radius: 5px;
+  @include btn;
   background-color: $accentColor;
-}
 
-.yes-button:hover{
-  cursor: pointer;
-  background-color: rgb(154, 195, 93);
-  transform: translateY(-3px);
-  box-shadow: 0 1rem 2rem rgba( 0, 0, 0, .5);
+  &:hover {
+    cursor: pointer;
+    background-color: $brightColor;
+    transform: translateY(-3px);
+    box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.5);
+  }
 }
-
