--- a/src/Components/App/App.scss
+++ b/src/Components/App/App.scss
@@ -1,1 +1,17 @@
 @import '../../index.scss';
+
+.overlay{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  height:100%;
+  width:100%;
+  transform: translate(-50%, -50%);
+  z-index: 1000; 
+  background-color: rgba(0, 0, 0, 0.8);
+  padding: 20px;
+  border-radius: 8px;
+}
