--- a/src/Components/Search/Search.scss
+++ b/src/Components/Search/Search.scss
@@ -1,22 +1,20 @@
 @import '../../index.scss';
-//new?
 .search-container {
   height: 100%;
   position: relative;
   margin: auto 0;
 }
 
-.searchBar {
+.search-bar {
   height: 3.2rem;
   max-width: 40rem;
   padding: 0.5rem;
   border-radius: 5px;
 
-  //what is this ?
-  // > * {
-  //   border-radius: 5px;
-  //   height: 2rem;
-  // }
+  > * {
+    border-radius: 5px;
+    height: 2rem;
+  }
 }
 
 .location-error-message {
