--- a/src/Components/BreweryCard/BreweryCard.scss
+++ b/src/Components/BreweryCard/BreweryCard.scss
@@ -1,6 +1,6 @@
 @import '../../index.scss';
 
-.breweryCard {
+.brewery-card {
   background-color: #e3e3c4;
   height: fit-content;
   max-width: 100%;
