--- a/src/Components/BreweryCard/BreweryCard.scss
+++ b/src/Components/BreweryCard/BreweryCard.scss
@@ -33,7 +33,7 @@
 
 .brewery-card-favorites-btn {
   cursor: pointer;
-  background-color: #e3e3c4;
+  background-color: transparent;
   position: absolute;
   top: 0.5rem;
   right: 0.5rem;
@@ -44,6 +44,5 @@
 }
 
 .selected{
-  background-color: rgb(229, 164, 42);
-  border: 3px solid black;
+  background-color: #BAB86C;
 }
