--- a/src/Components/FavoritesPage/FavoritesPage.scss
+++ b/src/Components/FavoritesPage/FavoritesPage.scss
@@ -9,13 +9,12 @@
   // grid-template-rows: repeat(4, 1fr);
   // background-color: $lightColor;
   background-color: $oliveGreen;
+  height: 100vh;
 }
 
 .favs-grid {
   display: grid;
   // grid-template-rows: repeat(auto-fit, minmax(100px, 1fr));
-  grid-auto-flow: column;
-  grid-template-rows: repeat(3, 200px);
-  grid-auto-columns: 300px 100px;
+  grid-auto-flow: row;
   gap: 2rem;
 }
