--- a/src/index.scss
+++ b/src/index.scss
@@ -50,4 +50,15 @@ $lightColor: #f7f7ed;
     grid-column: auto;
     order: 2;
   }
+
+  .search-bar{
+    margin-top: 3rem;
+  }
+
+  .logo {
+    height: 4rem;
+  }
+  .navBar {
+    height: 2.5rem;
+  }
 }
