--- a/src/Components/NavBar/NavBar.scss
+++ b/src/Components/NavBar/NavBar.scss
@@ -2,18 +2,13 @@
 
 .navBar {
   display: flex;
+  justify-content: flex-end;
   position: absolute;
   top: 0;
   background-color: rgba(39, 63, 29, .7);
   width: 100%;
+  height: 3.5rem;
   z-index: 1;
-}
-
-ul {
-  padding: 0 ;
-  width: 100%;
-  display: flex;
-  justify-content: start;
 }
 
 .navLink {
@@ -34,4 +29,12 @@ ul {
 .active {
   text-decoration: underline $brightColor 3px;
   cursor: default;
+}
+
+.logo {
+  position:absolute;
+  border-radius: 50%;
+  height: 6rem;
+  left: 1rem;
+  top: 0.5rem;
 }
