--- a/src/Components/Search/Search.scss
+++ b/src/Components/Search/Search.scss
@@ -10,7 +10,7 @@
   max-width: 40rem;
   padding: 0.5rem;
   border-radius: 5px;
-
+  margin-top: 4rem;
   > * {
     border-radius: 5px;
     height: 2rem;
@@ -56,6 +56,7 @@
     cursor: pointer;
   }
 }
+
 .dropdown {
   margin-right: 1rem;
   width: 6.5rem;
