--- a/src/Components/NavBar/NavBar.scss
+++ b/src/Components/NavBar/NavBar.scss
@@ -1,6 +1,6 @@
 @import '../../index.scss';
 
-.navBar {
+.nav-bar {
   display: flex;
   justify-content: flex-end;
   position: absolute;
@@ -11,7 +11,7 @@
   z-index: 1;
 }
 
-.navLink {
+.nav-link {
   display: flex;
   color: $lightColor;
   min-height: 2.5rem;
