--- a/src/index.scss
+++ b/src/index.scss
@@ -6,7 +6,7 @@
 
 @mixin btn {
   width: 6rem;
-  border-radius: 3px;
+  border-radius: 5px;
   color: $lightColor;
 }
 
@@ -29,7 +29,7 @@ $lightColor: #f7f7ed;
     grid-column: 3 / span 2;
   }
 
-  .breweryContainer {
+  .brewery-container {
     grid-column: 1 / span 2;
   }
 }
@@ -46,19 +46,35 @@ $lightColor: #f7f7ed;
     height: 300px;
   }
 
-  .breweryContainer {
+  .brewery-container {
     grid-column: auto;
     order: 2;
   }
 
+  #dropdown,
+  #searchInput,
+  #searchBtn{
+    height: 1.75rem;
+    width: 9rem;
+    margin-right: 0rem;
+    margin-bottom: 0.5rem;
+  }
+  
   .search-bar{
-    margin-top: 3rem;
+    height: 7rem;
+    margin: 0rem;
+    padding: 0px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    margin-top: 2rem;
   }
 
   .logo {
     height: 4rem;
   }
-  .navBar {
+
+  .nav-bar {
     height: 2.5rem;
   }
 }
