--- a/src/Components/FavoritesPage/FavoritesPage.scss
+++ b/src/Components/FavoritesPage/FavoritesPage.scss
@@ -1,20 +1,25 @@
 @import '../../index.scss';
 
 .favorites-page {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding:  5rem 3rem;
-  display: flex;
-  // grid-template-rows: repeat(4, 1fr);
+  padding-top:  5.5rem;
   background-color: $lightColor;
-  // background-color: $oliveGreen;
   min-height: 100vh;
 }
 
 .favs-grid {
+  text-align: center;
+  padding: 20px;
   display: grid;
-  // grid-template-rows: repeat(auto-fit, minmax(100px, 1fr));
-  grid-auto-flow: row;
-  gap: 2rem;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    grid-gap: 20px;
+
+}
+
+.card {
+  min-height: 10rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 200px;
 }
