Add grid styling

--- a/src/Components/BreweryCard/BreweryCard.scss
+++ b/src/Components/BreweryCard/BreweryCard.scss
@@ -2,7 +2,7 @@
 
 .brewery-card {
   background-color: #D5D5A7;
-  max-width: 100%;
+  max-width: 28rem;
   padding: 1rem;
   position: relative;
 }
