--- a/src/Components/FavoritesPage/FavoritesPage.scss
+++ b/src/Components/FavoritesPage/FavoritesPage.scss
@@ -1,7 +1,7 @@
 @import '../../index.scss';
 
 .favorites-page {
-  padding-top:  5.5rem;
+  padding-top: 5.5rem;
   background-color: $lightColor;
   min-height: 100vh;
 }
@@ -10,9 +10,8 @@
   text-align: center;
   padding: 20px;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-    grid-gap: 20px;
-
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  grid-gap: 20px;
 }
 
 .card {
