--- a/src/Components/Map/Map.scss
+++ b/src/Components/Map/Map.scss
@@ -18,4 +18,24 @@
 
 .leaflet-popup-content-wrapper {
   background-color: $lightAccentColor;
+  border: 1.5px solid white;
+}
+
+.leaflet-container a.leaflet-popup-close-button {
+  color:white;
+}
+
+
+.brew-name{
+  font-size: 1.1em;
+  color: white;
+}
+
+.address,
+.phone{
+  font-style: italic;
+}
+
+.brew-marker{
+  background-color: azure;
 }
