--- a/src/Components/Search/Search.scss
+++ b/src/Components/Search/Search.scss
@@ -67,13 +67,14 @@
 
 .suggestions {
   position: absolute;
-  top: 100%;
-  left: 0;
+  top: 78%;
+  left: 5;
   margin: 0;
   padding: 0;
+  width: 50.5%;
 
-  min-height: 50vh;
-  overflow: scroll;
+  height:auto;
+  overflow: auto;
   
   background-color: rgb(247, 247, 247);
   border-top: 1px solid rgb(212, 212, 212);
@@ -86,6 +87,10 @@
     padding: 10px;
     cursor: pointer;
   }
+}
+
+.suggestions li:hover {
+  background-color: #D5D5A7;
 }
 
 @media screen and (max-width: 600px) {
