--- a/src/Components/BreweryContainer/BreweryContainer.scss
+++ b/src/Components/BreweryContainer/BreweryContainer.scss
@@ -3,6 +3,7 @@
 .brewery-container {
   display: grid;
   grid-template-columns: 1fr;
+  grid-auto-rows: min-content max-content auto;
   gap: 1rem;
   padding: 0 1rem 0 0;
   height: 100%;
@@ -12,10 +13,11 @@
 }
 
 .no-results-message {
-  background-color: #e0cc99;
+  background-color: $oliveGreen;
   padding: 1rem;
+  margin-right: 1rem;
   text-align: center;
-  align-self: center;
+  align-self: start;
 }
 
 .filter-btn {
@@ -24,4 +26,9 @@
   justify-content: center;
   cursor: pointer;
   align-items: center;
+}
+
+.start-message{
+  background-color: $oliveGreen;
+  padding: 1rem;
 }
