--- a/src/Components/Map/Map.scss
+++ b/src/Components/Map/Map.scss
@@ -48,6 +48,10 @@
   color:white;
 }
 
+.leaflet-container a.leaflet-popup-close-button:hover {
+  color:rgb(201, 229, 20);
+}
+
 
 .brew-name{
   font-size: 1.1em;
